--- a/css/photographer.css
+++ b/css/photographer.css
@@ -87,6 +87,12 @@
     justify-content: space-between;
     padding: 35px;
     margin: auto;
+    position: absolute;
+    top: 10%;
+    right: 20%;
+    z-index: 2;
+    align-items: center;
+    
 }
 
 .modal header {
